# roaring-visual

./: .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
data/: Cargo.toml  README.md  ROARING_VERSION.txt
data/lookup-bench/: blockC1024_lookup.jsonl  blockC64_lookup.jsonl  blockC8_lookup.jsonl  uniform_lookup.jsonl  zipf_s0.9_lookup.jsonl  zipf_s1.0_lookup.jsonl  zipf_s1.2_lookup.jsonl
data/ops-bench/: blockC1024_ops.jsonl  blockC64_ops.jsonl  blockC8_ops.jsonl  uniform_ops.jsonl  zipf_s0.9_ops.jsonl  zipf_s1.0_ops.jsonl  zipf_s1.2_ops.jsonl
data/size-bench/: block_c1024_results.jsonl  block_c64_results.jsonl  block_c8_results.jsonl  uniform_results.jsonl  zipf_s0.9_results.jsonl  zipf_s1.0_results.jsonl  zipf_s1.2_results.jsonl
data/src/: lib.rs
scripts/: build-inverted-index-data.mjs  build-lookup-latency-data.mjs  build-ops-latency-data.mjs  build-size-bench-data.mjs
src/: App.tsx  styles.css
src/data/: invertedIndex.ts  lookupLatency.ts  opsLatency.ts  sizeBench.ts
src/lib/: queryState.ts
src/tabs/: BitmapSizeProfile.tsx  InvertedIndexSize.tsx  OperationLookup.tsx  OperatorLatency.tsx  RoaringStructure.tsx
src/tabs/viz/: ArrayContainerViz.tsx  BenchEnvFootnote.tsx  BitmapContainerViz.tsx  InvertedIndexPlot.tsx  InvertedIndexStats.tsx  KeySplitViz.tsx  OperationLookupPlot.tsx  OperationLookupStats.tsx  OperatorLatencyPlot.tsx  OperatorLatencyStats.tsx  PlotZScaleToggle.tsx  RunContainerViz.tsx  SizeProfilePlot.tsx  SizeProfileStats.tsx  (+1 more)
src/types/: plotly.d.ts
tests/: dummy.test.ts
