[package]
name = "roaring-bench"
version = "0.1.0"
edition = "2021"

# Binaries auto-discovered from src/bin/*.rs:
#   size_bench, ops_bench, lookup_bench
[lib]
name = "roaring_bench"
path = "src/lib.rs"

[dependencies]
roaring = "0.11"
rand = "0.8"
rand_pcg = "0.3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
